# morphor

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: grammar.pest  lib.rs  main.rs  parser.rs
