#
# Copyright © 2019 Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "morphor"
version = "0.0.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
morphor constructs finite-state machines and transducers.
"""
homepage = "https://github.com/pemistahl/morphor"
repository = "https://github.com/pemistahl/morphor"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
categories = ["command-line-utilities", "parser-implementations", "text-processing"]

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
petgraph = "0.4.13"
structopt = "0.3.3"